added some static titles

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,17 @@
-<h1>StaticPages#about</h1>
+<!DOCTYPE html>
 
-<p>This is the about page so my tests fucking pass</p>
+<html>
+
+    <head>
+        <title>About | Ruby on Rails Tutorial Sample App</title>
+    </head>
+    
+    <body>
+    
+        <h1>StaticPages#about</h1>
+        
+        <p>This is the about page so my tests fucking pass</p>
+    
+    </body>
+
+</html>
