added contact page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
+<% provide(:title, "About") %>
 
-<html>
+<h1>StaticPages#about</h1>
 
-    <head>
-        <title>About | Ruby on Rails Tutorial Sample App</title>
-    </head>
-    
-    <body>
-    
-        <h1>StaticPages#about</h1>
-        
-        <p>This is the about page so my tests fucking pass</p>
-    
-    </body>
-
-</html>
+<p>This is the about page so my tests fucking pass</p>
