--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,16 @@
 
 <html>
   <head>
-    <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+    <!--full_title function defined in app/helpers/application_helper.rb-->
+    <!--yield(:title) refers to the provide(...)function in app/views/static_pages-->
+    <title><%= full_title(yield(:title)) %> </title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
   
   <body>
-  
+  <!--refers to the provide(...) function in app/views/static_pages-->
   <%= yield %>
   
   </body>
