--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 <!--see views/layouts/application.html.erb for the yield(...) function in header-->
 <%= provide(:title, "Contact") %>
 
-<h1>This is the Contact page</h1>
+<h1>Contact</h1>
 
 <p>Find me on LinkedIn</p>
