--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class ="navbar navbar-fixed-top navbar-inverse">
-      
+
   <div class = "container">
     <%= link_to "sample_app", root_path, id: "logo" %>
     <nav>
@@ -11,10 +11,10 @@
           <%= link_to "Help", help_path %>
         </li>
         <li>
-          <%= link_to "Log In", "#" %>
+          <%= link_to "Log In", login_path %>
         </li>
       </ul>
     </nav>
   </div>
-  
+
 </header>
