--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,11 +10,40 @@
         <li>
           <%= link_to "Help", help_path %>
         </li>
-        <li>
-          <%= link_to "Log In", login_path %>
-        </li>
+        <% if logged_in? %>
+          <li>
+            <%= link_to "Users", '#' %>
+          </li>
+          <li class = "dropdown">
+            <a href = '#' class = "dropdown-toggle" data-toggle = "dropdown">
+              Account <b class = "caret"></b>
+            </a>
+            <ul class = "dropdown-menu">
+              <li>
+                <!-- current_user function in sessions_helper.rb -->
+                <%= link_to "Profile", user_path(current_user) %>
+              </li>
+              <li>
+                <%= link_to "Settings", '#' %>
+              </li>
+
+              <li class = "divider"></li>
+
+              <li>
+                <!-- uses http delete request -->
+                <%= link_to "Log Out", logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+
+        <% else %>
+
+          <li>
+            <%= link_to "Log In", login_path %>
+          </li>
+
+        <% end %>
       </ul>
     </nav>
   </div>
-
 </header>
